<resources>
    <string name="app_name">EpiFi</string>

    <!--Labels-->
    <string name="pan_number">PAN NUMBER</string>
    <string name="birthdate">BIRTHDATE</string>

    <!--Hints-->
    <string name="hint_enter_pan_number">Enter Pan Number</string>
    <string name="hint_date">DD</string>
    <string name="hint_month">MM</string>
    <string name="hint_year">YYYY</string>

    <!--Other-->
    <string name="msg_initial_steps">First of the few steps to set you up with a Bank Account</string>
    <string name="logo">LOGO</string>
    <string name="zero">0</string>
    <string name="no_pan">I don\'t have a PAN</string>
    <string name="next">Next</string>
    <string name="disclaimer">Providing PAN &amp; Date of Birth helps s find and fetch your KYC from a central registry by the Government of India.  <font color="#6142b0">Learn more</font></string>
    <string name="details_submitted">Details Submitted Successfully</string>
</resources>